--- a/index.html
+++ b/index.html
@@ -8,19 +8,16 @@
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="./assets/css/loading-bar.css" />
+    <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
+
 </head>
 
 <body>
+
     <div class="container text-white" style="margin-top: 10rem;">
         <div class="row justify-content-around">
-            <div class="col-md-5 shadow-lg p-5 mb-5 rounded">
-                <!-- <div class="progress mb-3">
-                    <div class=></div>
-                </div> -->
-                <div id="Progress_Status">
-                    <div  class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0"
-                    aria-valuemax="100"></div>
-                </div>
+            <div class="col-md-5 col-sm-12 shadow-lg p-5 mb-5 rounded">
                 <div class="card p-2  shadow-lg mb-1 data-tilt data-tilt-reset=" id="card"
                     style="background-size: cover; background-position: center;">
                     <div class="d-flex justify-content-between">
@@ -42,11 +39,7 @@
                 </div>
             </div>
 
-            <div class="col-md-5 shadow-lg p-5 mb-5  rounded">
-                <!-- <div class="progress mb-3">
-                    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0"
-                        aria-valuemax="100"></div>
-                </div> -->
+            <div class="col-md-5 col-sm-12   shadow-lg p-5 mb-5  rounded">
                 <div class="card p-2 mb-1 data-tilt data-tilt-reset=" id="photo" style="background-size: cover;">
                     <div class="d-flex justify-content-between">
                         <div class="d-flex flex-row align-items-center">
@@ -60,10 +53,6 @@
                     <div class="mt-5">
                         <h3 class="heading">Desenvolvedor<br>Full-Stack</h3>
                         <div class="mt-5">
-                            <!-- <div class="progress">
-                                <div class="progress-bar color" role="progressbar" style="width: 50%" aria-valuenow="50"
-                                    aria-valuemin="0" aria-valuemax="100"></div>
-                            </div> -->
                             <div class="mt-3"> <span class="text1">6 months <span class="text2">Complete</span></span>
                             </div>
                         </div>
@@ -75,6 +64,8 @@
 
     </div>
 
+
+
     <script type="text/javascript" src="./assets/js/vanilla-tilt.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -82,6 +73,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
         crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./assets/js/loading-bar.js"></script>
+
 
 </body>
 
@@ -89,39 +82,23 @@
 
 <script>
 
-
     VanillaTilt.init(document.querySelectorAll(".card"), {
         max: 10,
         speed: 400,
         glare: true,
         "max-glare": 1
     });
-
-
-    const btn = document.getElementById('btn');
-    const card = document.getElementById('card');
+    var btn = document.getElementById('btn');
+    var card = document.getElementById('card');
+    var photo = document.getElementById('photo');
 
     btn.addEventListener('click', function onClick(event) {
+        var hasImages = card.style.backgroundImage || photo.style.backgroundImage;
 
-        document.getElementById('card').style.backgroundImage = "url(selbetti.jpg)";
-        document.getElementById('photo').style.backgroundImage = "url(photo.jpg)";
-
-        var element = document.getElementById("progress-bar");
-        var width = 1;
-        var identity = setInterval(scene, 10);
-        function scene() {
-            if (width >= 100) {
-                clearInterval(identity);
-            } else {
-                width++;
-                element.style.width = width + '%';
-            }
-        }
+        card.style.backgroundImage = hasImages ? "" : "url(selbetti.jpg)";
+        photo.style.backgroundImage = hasImages ? "" : "url(photo.jpg)";
+        btn.innerText = hasImages ? "Inject Image" : "Remove Image";
+        card.style.backgroundColor = hasImages ? "" : "transparent";
     });
-
-
-    function update() {
-
-    }
 
 </script>
